--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="container">
 			<h1>Hello, World!</h1>
-			<p>This is a simple HTML page served from <code>index.html</code>.</p>
+			<p>This is a simple HTML page served from izzy.</p>
 		</div>
 	</body>
 </html>
